dev/istio_gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway 
metadata:
  name: spring-boot-app-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: firstapp
        protocol: HTTP 
      hosts:
        - "*"
    - port:
        number: 80
        name: secondapp
        protocol: HTTP 
      hosts:
        - "*"
