dev/second_app_destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: spring-boot-second-app
  namespace: spring-boot-second-app
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  host: spring-boot-second-app.spring-boot-second-app.svc.cluster.local
